--- a/genres.html
+++ b/genres.html
@@ -3,29 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Web - Gêneros</title>
+    <title>MovieDB - Netflix Style</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Pesquisar Filmes por Gênero</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="search.html">Pesquisar Filmes</a></li>
-                <li><a href="genres.html">Pesquisar Gêneros</a></li>
-                <li><a href="about.html">Sobre</a></li>
-            </ul>
-        </nav>
-        <div class="search-container">
-            <select id="genreSelect">
-                <option value="">Pesquisar um gênero...</option>
-            </select>
-            <button id="genreButton">Pesquisar</button>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">MovieDB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="search.html">Search</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="genres.html">Genres</a></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">My List</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                </ul>
+            </div>
         </div>
-        <div id="loadingSpinner"></div>
-        <div id="moviesList"></div>
-    </div>
+    </nav>
+
+    <main class="container my-5">
+
+        <br>
+
+        <section class="genres-section">
+            <div class="container">
+                <h1>Buscar por Gêneros</h1>
+                <div class="search-container">
+                    <select id="genreSelect">
+                        <!-- Opções de gêneros serão carregadas dinamicamente -->
+                    </select>
+                    <button id="genreSearchButton">Buscar</button>
+                </div>
+                <div id="genreResults" class="movies-grid">
+                    <!-- Resultados da busca por gêneros serão exibidos aqui -->
+                </div>
+            </div>
+        </section>      
+        
+
+       
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/genres.js"></script>
 </body>
 </html>
