--- a/search.html
+++ b/search.html
@@ -3,27 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Web - Pesquisa</title>
+    <title>MovieDB - Netflix Style</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Pesquisar Filmes</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="search.html">Buscar Filmes</a></li>
-                <li><a href="genres.html">Buscar Gêneros</a></li>
-                <li><a href="about.html">Sobre</a></li>
-            </ul>
-        </nav>
-        <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Pesquisar filmes...">
-            <button id="searchButton">Pesquisar</button>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">MovieDB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page"href="search.html">Search</a></li>
+                    <li class="nav-item"><a class="nav-link" href="genres.html">Genres</a></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">My List</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                </ul>
+            </div>
         </div>
-        <div id="loadingSpinner"></div>
-        <div id="moviesList"></div>
-    </div>
+    </nav>
+
+    <main class="container my-5">
+
+        <br>
+
+        <section class="search-section">
+            <div class="container">
+                <h1>Buscar Filmes</h1>
+                <div class="search-container">
+                    <input type="text" id="searchInput" placeholder="Digite o nome do filme">
+                    <button id="searchButton">Buscar</button>
+                </div>
+                <div id="searchResults" class="movies-grid">
+                    <!-- Resultados da busca serão exibidos aqui -->
+                </div>
+            </div>
+        </section>
+        
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/search.js"></script>
 </body>
 </html>
