--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieDB - Netflix Style</title>
+    <title>Desafio Web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">MovieDB</a>
+            <a class="navbar-brand" href="#">Desafio Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="search.html">Search</a></li>
-                    <li class="nav-item"><a class="nav-link" href="genres.html">Genres</a></li>
+                    <li class="nav-item"><a class="nav-link" href="search.html">Busca</a></li>
+                    <li class="nav-item"><a class="nav-link" href="genres.html">Gêneros</a></li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#">My List</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 </ul>
             </div>
         </div>
@@ -34,7 +34,6 @@
 
         <section class="hero-banner">
             <div class="hero-carousel">
-                <!-- Slides do Carrossel serão gerados dinamicamente -->
             </div>
             <div class="hero-background"></div>
         </section>
@@ -42,9 +41,8 @@
         <br><br>
 
         <section class="movies-section">
-            <h2 class="section-title text-white">Popular Movies</h2>
+            <h2 class="section-title text-white">Mais Populares</h2>
             <div class="popular-movies-carousel">
-                <!-- Movies will be dynamically inserted here -->
             </div>
         </section>
         
@@ -52,13 +50,11 @@
         <br>
 
         <section class="movies-section">
-            <h2 class="section-title text-white">Top Rated Movies</h2>
+            <h2 class="section-title text-white">Mais Bem Avaliados</h2>
             <div class="top-rated-movies-carousel">
-                <!-- Top Rated Movies will be dynamically inserted here -->
             </div>
         </section>
 
-        <!-- Add more sections as needed -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
