--- a/movie-details.html
+++ b/movie-details.html
@@ -3,33 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieDB - Netflix Style</title>
+    <title>Desafio Web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/selyts.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">MovieDB</a>
+            <a class="navbar-brand" href="#">Desafio Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="search.html">Search</a></li>
-                    <li class="nav-item"><a class="nav-link" href="genres.html">Genres</a></li>
+                    <li class="nav-item"><a class="nav-link" href="search.html">Busca</a></li>
+                    <li class="nav-item"><a class="nav-link" href="genres.html">Gêneros</a></li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">My List</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <main class="container my-5">
-        <div class="movie-details-section">
+        <div class="movie-details-section" id="importante">
             <div class="movie-details">
                 <h2 id="movie-title-detail">Título</h2>
                 <img id="movie-poster" src="" alt="Movie Poster">
@@ -37,13 +36,11 @@
                 <p><strong>Sinopse:</strong> <span id="overview"></span></p>
                 <p><strong>Gênero:</strong> <span id="genre"></span></p>
                 <p><strong>Tagline:</strong> <span id="movie-description"></span></p>
-                <!-- Outros detalhes do filme podem ser adicionados aqui -->
             </div>
     
-            <aside class="sidebar">
+            <aside class="sidebar" id="naoimportante">
                 <h2>Popular Movies</h2>
                 <div class="movies-grid" id="popular-movies">
-                    <!-- Filmes populares serão inseridos dinamicamente aqui -->
                 </div>
             </aside>
         </div>   
